AMP-24601: Switched from new Long() to Long.valueOf()